tests/ui/types.stderr
error[E0308]: mismatched types
   --> tests/ui/types.rs:20:9
    |
18  | #[open_enum]
    | ------------ arguments to this function are incorrect
19  | enum InterpretsAsIsize {
20  |     X = u8::MAX,
    |         ^^ expected `isize`, found `u8`
    |
note: function defined here
   --> $RUST/core/src/convert/mod.rs
    |
    | pub const fn identity<T>(x: T) -> T {
    |              ^^^^^^^^
